--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ target/classes/.netbeans_automatic_build
 target/test-classes/.netbeans_automatic_build
 target/classes/.netbeans_automatic_build
 target/test-classes/.netbeans_automatic_build
+target/era_datamodels 1.0-SNAPSHOT.jar
+target/maven-archiver/pom.properties
